force-app/main/default/objects/Apttus_Billing__LegalEntityCustomNumberingEntry__c/Apttus_Billing__LegalEntityCustomNumberingEntry__c.object-meta.xml
<CustomObject>
    <label>Legal Entity Custom Numbering Entry</label>
    <nameField>
        <displayFormat>LCNE-{00000000}</displayFormat>
        <label>Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Entity Custom Numbering Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>