force-app/main/default/objects/Apttus_Billing__LegalEntityCustomNumberingEntry__c/fields/Apttus_Billing__CustomNumberCreationOption__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__CustomNumberCreationOption__c</fullName>
    <description>Options to control when the custom number will be created. Create custom number when status is Draft or when the Status is Approved.</description>
    <inlineHelpText>Options to control when the custom number will be created.</inlineHelpText>
    <label>Custom Number Creation Option</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <default>true</default>
                <label>Approved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>