force-app/main/default/objects/Apttus_Billing__LegalEntityCustomNumberingEntry__c/fields/Apttus_Billing__FieldBasedPrefix__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__FieldBasedPrefix__c</fullName>
    <description>The field-based prefix to append to the static prefix when generating a Custom Number. Each fetched field value will be separated with the specified field separator.</description>
    <inlineHelpText>The field-based prefix to append to the static prefix when generating a Custom Number.</inlineHelpText>
    <label>Field Based Prefix</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>