force-app/main/default/objects/Apttus_Billing__LegalEntityCustomNumberingEntry__c/fields/Apttus_Billing__FieldBasedSuffix__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__FieldBasedSuffix__c</fullName>
    <description>The field-based suffix to append after the generated Custom Number. Each fetched field value will be separated with the specified field separator.</description>
    <inlineHelpText>The field based suffix to append after the generated Custom Number.</inlineHelpText>
    <label>Field Based Suffix</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>