force-app/main/default/objects/Apttus_Billing__LegalEntityCustomNumberingEntry__c/fields/Apttus_Billing__InitialSequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__InitialSequenceNumber__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The initial number for custom numbering sequence.</description>
    <inlineHelpText>The initial number for custom numbering sequence.</inlineHelpText>
    <label>Initial Sequence Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>