force-app/main/default/objects/Apttus_Billing__LegalEntityCustomNumberingEntry__c/fields/Apttus_Billing__LegalEntityId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__LegalEntityId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Select the Legal Entity for which the next number is being defined.</description>
    <inlineHelpText>Associated Legal Entity eg. US-NY</inlineHelpText>
    <label>Legal Entity</label>
    <referenceTo>Apttus_Config2__LegalEntity__c</referenceTo>
    <relationshipLabel>Legal Entity Custom Numbering Entries</relationshipLabel>
    <relationshipName>LegalEntityCustomNumberingEntries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>