force-app/main/default/objects/Apttus_Billing__LegalEntityCustomNumberingEntry__c/fields/Apttus_Billing__NextSequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__NextSequenceNumber__c</fullName>
    <description>The next number for this custom numbering sequence. Will be initialized to the Initial Sequence Number.</description>
    <inlineHelpText>The next number for this custom numbering sequence.</inlineHelpText>
    <label>Next Sequence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>