force-app/main/default/objects/Apttus_Billing__LegalEntityCustomNumberingEntry__c/fields/Apttus_Billing__NumberingType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__NumberingType__c</fullName>
    <description>Select the object or class of objects to apply the custom numbering settings to.</description>
    <inlineHelpText>Select the object or class of objects to apply the custom numbering settings to.</inlineHelpText>
    <label>Numbering Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Split Invoice</fullName>
            </value>
            <value>
                <fullName>Credit Memo</fullName>
            </value>
            <value>
                <fullName>Wallet Credit Memo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>