force-app/main/default/objects/Apttus_Billing__LegalEntityCustomNumberingEntry__c/fields/Apttus_Billing__NumberOfLeadingZeros__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__NumberOfLeadingZeros__c</fullName>
    <defaultValue>10</defaultValue>
    <description>The number of leading zeros preceding the sequence number.</description>
    <inlineHelpText>The number of leading zeros preceding the sequence number.</inlineHelpText>
    <label>Number of Leading Zeros</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>