force-app/main/default/objects/Apttus_Billing__LegalEntityCustomNumberingEntry__c/fields/Apttus_Billing__StaticPrefix__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__StaticPrefix__c</fullName>
    <description>Initial prefix to prepend when generating a Custom Number. This will precede the optional field based prefix.</description>
    <inlineHelpText>Initial prefix to prepend when generating a Custom Number.</inlineHelpText>
    <label>Static Prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>