force-app/main/default/objects/Apttus_Billing__LegalEntityCustomNumberingEntry__c/validationRules/Apttus_Billing__NoOfLeadingZerosRangeError.validationRule-meta.xml
<ValidationRule>
    <fullName>Apttus_Billing__NoOfLeadingZerosRangeError</fullName>
    <active>true</active>
    <errorConditionFormula>Apttus_Billing__NumberOfLeadingZeros__c &lt; 0 || Apttus_Billing__NumberOfLeadingZeros__c &gt; 10</errorConditionFormula>
    <errorDisplayField>Apttus_Billing__NumberOfLeadingZeros__c</errorDisplayField>
    <errorMessage>The number of leading zeros must be greater than 0 and less than 11.</errorMessage>
</ValidationRule>